# Embedded_Linux

Lab1/: .~lock.Lab1.odt#  Lab1.odt  ip
Lab2/: .~lock.Lab2.odt#  Lab2.odt
Lab2/include/: numbers.h
Lab2/src/: a.out  main.c  main_preprocessed.c  numbers.c  program
embeddedlinux_lab5/Pico_Template/: .gitignore  CMakeLists.txt
embeddedlinux_lab5/Pico_Template/src/: led.c
